# tdoku-lib

./: CMakeLists.txt  LICENSE  README.md
include/: tdoku.h
src/: generate.cc  solve.cc  solver_dpll_triad_simd.cc
